refactor : handle negative response in swagger
