# BookStoreBackend/app/lib/apiDocs.json
@@ -53,6 +53,14 @@
                         "schema": {
                             "$ref": "#/definitions/registration"
                         }
+                    },"400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -81,6 +89,15 @@
                         "schema": {
                             "$ref": "#/definitions/registration"
                         }
+                    },
+                    "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -108,6 +125,14 @@
                         "schema": {
                             "$ref": "#/definitions/login"
                         }
+                    },"400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -135,7 +160,17 @@
                         "schema": {
                             "$ref": "#/definitions/login"
                         }
+                    },
+                    "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
+                   
                 }
             }
         },
@@ -166,7 +201,17 @@
                         "schema": {
                             "$ref": "#/definitions/book"
                         }
+                    },
+                     "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
+                   
                 },
                 "security": [{
                     "JWT": []
@@ -189,6 +234,15 @@
                     "200": {
                         "description": "found All books !"
                     }
+                },
+                "400":{
+                    "description": "Something Went Wrong"
+                },
+                "404":{
+                    "description": "Not found"
+                },
+                "500":{
+                    "description": "Internal Server Error"
                 },
                 "security": [{
                     "JWT": []
@@ -227,8 +281,20 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "update book successfully!"
+                        "description": "update book successfully!",
+                        "schema": {
+                            "$ref": "#/definitions/book"
+                        }
 
+                    },
+                    "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     }
                 },
                 "security": [{
@@ -262,6 +328,15 @@
 
                         }
                     },
+                    "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
+                    },
                     "security": [{
                         "JWT": []
                     }],
@@ -293,6 +368,15 @@
                             "description": "book added to bag successfully!"
 
                         }
+                    },
+                    "400":{
+                        "description": "Something Went Wrong"
+                    },
+                    "404":{
+                        "description": "Not found"
+                    },
+                    "500":{
+                        "description": "Internal Server Error"
                     },
                     "security": [{
                         "JWT": []
@@ -358,7 +442,9 @@
                     "title",
                     "author",
                     "quantity",
-                    "price"
+                    "price",
+                    "image",
+                    "adminId"
                 ],
                 "properties": {
                     "title": {
